fixed one sentence, still a bit to go tmrw

--- a/paper.tex
+++ b/paper.tex
@@ -626,10 +626,8 @@ by evaluating the following research questions:
 
 \section{Related Work}
 This section is broadly divided into two parts reflecting the two areas this paper spans. 
-First, we survey efforts in verified compilation, with an emphasis on projects that
-target the LLVM ecosystem. This includes contributions ranging from the validation of individual peephole
-rewrites to the development of fully end-to-end verified compilers. Then, we shift our focus to highlight 
-general advancements around trustworthy compilation with a focus on backends and verification tooling 
+First, we survey efforts in verified compilation, with an emphasis on the LLVM ecosystem. Then, we shift
+our focus to highlight general advancements around trustworthy compilation with a focus on backends and verification tooling 
 such as language and ISA semantics besides rigorous compiler testing.
 
 \textbf{Verified Compilation}
